Improvements in the cakes app. Added user to the view data.

--- a/C# Web Devolpment Basic-May2018/08.MVC FRAMEWORK - ADVANCED - IOC, DATA BINDING/SIS-Lab/Apps/CakesWebApp/Views/Login.html
+++ b/C# Web Devolpment Basic-May2018/08.MVC FRAMEWORK - ADVANCED - IOC, DATA BINDING/SIS-Lab/Apps/CakesWebApp/Views/Login.html
@@ -1,6 +1,6 @@
 ﻿<h1>Login</h1>
 
-<form method="post" action="/login">
+<form method="post" action="/account/login">
     <div class="form-group row">
         <label class="form-control-label col-sm-2">Username:</label>
         <div class="col-sm-4">
@@ -20,4 +20,4 @@
     </div>
 </form>
 Don't have an account?
-<a href="/register" class="btn btn-primary">Register</a>
+<a href="/account/register" class="btn btn-primary">Register</a>
