--- a/C# Web Devolpment Basic-May2018/08.MVC FRAMEWORK - ADVANCED - IOC, DATA BINDING/SIS-Lab/Apps/CakesWebApp/Views/OrderById.html
+++ b/C# Web Devolpment Basic-May2018/08.MVC FRAMEWORK - ADVANCED - IOC, DATA BINDING/SIS-Lab/Apps/CakesWebApp/Views/OrderById.html
@@ -1,15 +1,22 @@
 ﻿@if (Model.IsShoppingCart)
 {
-    <h1>Shopping Cart</h1>
+<h1>Shopping Cart</h1>
 }
 @else
 {
-     <h1>Order with @Model.Id</h1>
+<h1>Order with @Model.Id</h1>
 }
 
-@foreach (var product in Model.Products)
+@if (Model.Products.Any())
 {
-<div>
-    <a href="/cakes/view?id=@product.Id">@product.Name</a> $@product.Price
-</div>
-} 
+   @foreach (var product in Model.Products)
+   {
+     <div>
+         <a href="/cakes/view?id=@product.Id">@product.Name</a> $@product.Price
+     </div>
+   }
+}
+@else
+{
+    <div class="alert alert-primary">No products.</div>
+}
