--- a/C# Web Devolpment Basic-May2018/08.MVC FRAMEWORK - ADVANCED - IOC, DATA BINDING/SIS-Lab/Apps/CakesWebApp/Views/_Layout.html
+++ b/C# Web Devolpment Basic-May2018/08.MVC FRAMEWORK - ADVANCED - IOC, DATA BINDING/SIS-Lab/Apps/CakesWebApp/Views/_Layout.html
@@ -18,6 +18,7 @@
                 @else
                 {
                 <li class="list-group-item"><i class="fas fa-user"></i> <a href="/user/profile">My Profile</a></li>
+                <li class="list-group-item"><i class="fas fa-user"></i> <a href="/orders/list">My Orders</a></li>
                 <li class="list-group-item"><i class="fas fa-user-slash"></i> <a href="/account/logout">Logout</a></li>
                 }
 
@@ -32,6 +33,11 @@
         </div>
         <div class="col-md-9 col-sm-12">
             @RenderBody()
+
+            <hr />
+            { var year = DateTime.UtcNow.Year; }
+            { year = year + 1; }
+            Copyright &copy; @year
         </div>
     </div>
 </div>
